<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    android:padding="@dimen/activity_horizontal_margin">
    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:paddingStart="@dimen/splash_padding_left1"
        android:paddingEnd="@dimen/splash_padding_right1"
        android:paddingTop="@dimen/button_margin"
        android:src="@drawable/nyansa_icon_lighter_purple" />

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/nyansa"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:paddingStart="@dimen/splash_padding_left2"
        android:paddingEnd="@dimen/splash_padding_right2"
        android:src="@drawable/nyansa_white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_activity_api"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:inputType="text"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/white"
        android:id="@+id/token"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/login_activity_api_hint"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/login_activity_url"
        android:inputType="textUri"
        android:textColor="@color/white"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/url"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/login_activity_url_hint"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/login_activity"
        android:background="@color/light_purple"
        android:id="@+id/login_button"
        android:onClick="loginActivity"
        android:textSize="20sp"
        />
</LinearLayout>