<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_purple"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.candeapps.thenyansacomplete.devicesearch.DeviceSearchFragment" >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/purple"
        android:id="@+id/main">

        <TextView
            android:id="@+id/textViewDeviceSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/device_search"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDeviceMac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/searchBar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/searchBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/yellow"
            android:textColor="@color/gray"
            android:ems="10"
            android:singleLine="true"
            android:typeface="monospace"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:textCursorDrawable="@null"
            android:imeOptions="actionSearch"
            >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/buttonSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="searchDeviceClick"
                android:text="@string/Search"
                android:textColor="@color/white"
                android:background="@color/blue"
                />

        </LinearLayout>
    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/title_recycler_view"
                        android:scrollbars="vertical"
                        android:layout_below="@+id/main"
                        android:padding="@dimen/activity_vertical_margin"
                        android:paddingEnd="@dimen/recycle_horiz_margin"
                        android:paddingStart="@dimen/recycle_horiz_margin"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:background="@color/purple"
                        android:visibility="gone"
                        >
                    </android.support.v7.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/progress_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_below="@id/title_recycler_view"
        />

</RelativeLayout>
